--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,24 @@
 ## Site Meta ##
 # The title of the website.
-title: "Lens - Elastic Designs"
+title: "'t ringwinkeltje"
 # The description of the website
-description: "A Jekyll theme for photographers and photo bloggers."
+description: "ringen"
 # Keywords/tags for you site.
-keywords: "lens, jeykll-lens, jekyll, theme, jekyll-theme, photography, blog, photography-blog, photo-blog"
+keywords: "ring, ringen"
 # Your copyright message.
-copyright: "Copyright &copy; 2017 - Elastic Designs."
+copyright: "Copyright &copy; 2020 - 't ringwinkeltje."
 
 ## Site Configurations ##
 # 1st heading of the site.
-header: "Lens"
+header: "'t ringwinkeltje"
 # 2nd heading/sub heading of the website.
-subheader: "Elastic Designs"
+subheader: "Myri-Ann"
 # A description/bio of the website.
 bio: "A Jekyll theme for photographers and photo bloggers."
 social:
-  # Your Twitter username.
-  twitter_username: ""
-  # Your Facebook username.
   facebook_username: ""
   # Your Instagram username.
   instagram_username: ""
-  # GitHub username.
-  github_username: "ElasticDesigns"
   # Your email address.
   email: ""
 
