--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ header: "'t ringwinkeltje"
 # 2nd heading/sub heading of the website.
 subheader: "Myri-Ann"
 # A description/bio of the website.
-bio: "A Jekyll theme for photographers and photo bloggers."
+bio: "Ringen door Myriam en Annie."
 social:
   facebook_username: ""
   # Your Instagram username.
