--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: tringwinkeltje
+title: "'t Ringwinkeltje"
 description: 'Ringen door Myriam en Annie'
 baseurl: "/tringwinkeltje/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
