--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Parallelism
+title: "'t Ringwinkeltje"
 description: >- # this means to ignore newlines until "baseurl:"
   A responsive site template designed by HTML5 Up,<br>
   ported to Jekyll by MOODULE<br>
@@ -15,15 +15,15 @@ phone: (716) 555-5555
 email: youremailaddress@gmail.com
 
 # Social settings
-500px_url: https://github.com/moodule
-facebook_url: https://github.com/moodule
-github_url: https://github.com/moodule
-gitlab_url: https://github.com/moodule
-instagram_url: https://github.com/moodule
-linkedin_url: https://github.com/moodule
-pinterest_url: https://github.com/moodule
-slack_url: https://github.com/moodule
-twitter_url: https://github.com/moodule
+500px_url: https://www.google.com
+facebook_url: https://www.google.com
+github_url: https://www.google.com
+gitlab_url: https://www.google.com
+instagram_url: https://www.google.com
+linkedin_url: https://www.google.com
+pinterest_url: https://www.google.com
+slack_url: https://www.google.com
+twitter_url: https://www.google.com
 
 # Optional elements
 logo: /assets/images/logo.png
@@ -41,7 +41,7 @@ recaptcha:
 
 # Collections
 collections:
-  parallelism:
+  :
     output: false
     date: 2019-05-07
   shiva:
@@ -61,16 +61,16 @@ defaults:
       path: ""
     values:
       menu: default
-  -
-    scope:
-      path: "en"
-    values:
-      lang: "en"
-  -
-    scope:
-      path: "fr"
-    values:
-      lang: "fr"
+  # -
+  #   scope:
+  #     path: "en"
+  #   values:
+  #     lang: "en"
+  # -
+  #   scope:
+  #     path: "fr"
+  #   values:
+  #     lang: "fr"
 
 # Build settings
 permalink: pretty
